--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
           >. Coded by
-          <a href="https://www.instagram.com/pawan_js_/?hl=en">Pawan JS</a>.
+          <a href="https://www.pawanjs.xyz/">Pawan JS</a>.
         </p>
       </footer>
     </section>
